internal/bloblang2/tree-sitter/test/corpus/comments.txt
==================
Line comment
==================

# this is a comment
output = input

---

(source_file
  (comment)
  (assignment
    (assign_target)
    (input)))

==================
Inline comment
==================

output = input # grab input

---

(source_file
  (assignment
    (assign_target)
    (input))
  (comment))
